--- a/day-2/navbar.html
+++ b/day-2/navbar.html
@@ -7,13 +7,16 @@
     <title>Document</title>
     <!-- <link rel="stylesheet" href="navbar.css"> -->
     <style>
-        #nav{
+         #nav{
             display: flex;
             border: 0px solid;
             justify-content:space-between;
             align-items: center;
             padding:0px 4%;
             box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            position: sticky;
+            top:0px;
+            background-color: white;
         }    
         #nav>div{
             border: 0px solid;
@@ -68,9 +71,10 @@
             width:72%;
             background-color: green;
             position:absolute;
-            top:75px;
+            top:65px;
             left:200px;
             display:none;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
         }
         #drop>div>div{
             width: 20%;
@@ -92,6 +96,7 @@
             right:20px;
             display: none;
             padding-left: 10px;
+            background-color: white;
         }
         #profile_drop>p:hover{
             font-weight: bolder;
@@ -251,6 +256,12 @@
 </body>
 </html>
 <script>
+    window.addEventListener("scroll",function()
+    {
+        let scroll=document.querySelector("#drop")
+        scroll.style.position="sticky"
+        console.log("ddd")
+    })
     //for navbar major categories
     let div=document.querySelector("#drop")
     let cat=document.querySelectorAll("#nav_cat>div")
