--- a/day-3/product_page.html
+++ b/day-3/product_page.html
@@ -1695,6 +1695,7 @@ document.querySelector("#nav_cat>div").addEventListener("hover")
      onethreesix.addEventListener("change",function(el)
      {
       //pp_card.innerHTML=''
+      console.log(el)
         if(el.target.checked)
         {
             let res=mensData.filter(function(el)
